--- a/xss/production/test/jquery2.html
+++ b/xss/production/test/jquery2.html
@@ -5,6 +5,7 @@
 <title>TITLE</title>
 <script type="text/javascript" src="../js/jquery-1.7.1.min.js"></script>
 <script type="text/javascript" src="../js/jquery-ui-1.8.18.custom.min.js"></script>
+<script type="text/javascript" src="../js/jquery-idiom.js"></script>
 <link rel="stylesheet" href="../css/ui-lightness/jquery-ui-1.8.18.custom.css">
 <script type="text/javascript">
 $(function() {
@@ -16,16 +17,15 @@ $(function() {
 			var b1 = $("#b1");
 			var c1 = $("#c1");
 			var application = $("#application");
-					r1.css("background-color", "Red");
 });
 </script>
 <style>
-#main {width : 600;height : 400}
-#r1 {background-color : "Red";width : 100}
-#r2 {width : 100}
-#l1 {width : 100}
-#t1 {height : 100}
-#b1 {height : 100}
+#main {width : 600px;height : 400px}
+#r1 {background-color : "Red";width : 100px}
+#r2 {width : 100px}
+#l1 {width : 100px}
+#t1 {height : 100px}
+#b1 {height : 100px}
 </style>
 </head>
 <body>
@@ -40,7 +40,7 @@ $(function() {
         <tr  height = "100px"   style="vertical-align:top">
 <div id="t1">
 </div>
-</tr><tr>
+</tr><tr style="vertical-align:top">
 <div id="c1">
 </div>
 </tr><tr  height = "100px"   style="vertical-align:top">
