--- a/xss/production/test/jquery3.html
+++ b/xss/production/test/jquery3.html
@@ -5,26 +5,20 @@
 <title>TITLE</title>
 <script type="text/javascript" src="../js/jquery-1.7.1.min.js"></script>
 <script type="text/javascript" src="../js/jquery-ui-1.8.18.custom.min.js"></script>
+<script type="text/javascript" src="../js/jquery-idiom.js"></script>
 <link rel="stylesheet" href="../css/ui-lightness/jquery-ui-1.8.18.custom.css">
 <script type="text/javascript">
 $(function() {
 			var main = $("#main");
-			var tc1 = $("#tc1");
 			var local = $("#local");
 			var remote = $("#remote");
 			var __img1 = $("#__img1");
 			var application = $("#application");
-tc1.tabs(
-{
-			    collapsible : true,
-		    }
-);
 					__img1.attr("src", "images/img1.png");
 });
 </script>
 <style>
 #main {width : 600px;height : 400px}
-#tc1 {width : 400px}
 #__img1 {display : block;margin-left : auto;margin-right : auto}
 </style>
 </head>
@@ -33,14 +27,6 @@ tc1.tabs(
 <div id="main">
             <table border="0"  width = "600"  height = "400" >
         <tr><td  width = "400px"   style="vertical-align:top">
-<div id="tc1">
-		<ul>
-			<li><a href="#local"><span>Components</span></a></li>
-			<li><a href="somepage.html"><span>Some Page</span></a></li>
-		</ul>
-<div id="local">
-</div>
-</div>
 </td><td style="vertical-align:middle">
 				<img id="__img1"
 						src="images/img1.png" 
