--- a/xss/production/test/3js_cube.html
+++ b/xss/production/test/3js_cube.html
@@ -30,6 +30,7 @@ var g_elapsed = -1;
 var g_delta = 0.0;	
 var drawingCanvas = renderer.domElement;
 var canvas_position = {x:0, y:0};
+var streamer = new ms.streamer.Streamer();
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var lbl0;
@@ -116,15 +117,14 @@ threejs_load_resources(function()
 	{    
 		application.events.dispatch("keydown", [keycode]);
 	});
-		    lbl0 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "12px Verdana");
+		    lbl0 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         lbl0 = lbl0;
             lbl0.set_x(200);
             lbl0.set_y(75);
             lbl0.text("Drag mouse to spin the cube");
-materials = 
-new Array(
-);
+			materials = 
+			new Array() ;
 __basic_material1 = new THREE.MeshBasicMaterial({
 color:Math.random() * 0xffffff
 	});
@@ -153,25 +153,21 @@ plane_material = new THREE.MeshBasicMaterial({
 color:Grey
 	});
             set_material_alpha(plane_material, 50);
-scene = 
-new THREE.Scene(
-);
-camera_1 = 
-new THREE.Camera(
-70,1.5,1,1000);
+			scene = 
+			new THREE.Scene() ;
+		camera_1 = 
+		new THREE.Camera(70, 1.5, 1, 1000, null) ;	
 		active_camera = camera_1;
             camera_1.position.y = 300;
             camera_1.position.z = 500;
-	    var cube_1_cube = 
-new THREE.Cube(
-200,200,200,1,1,1,materials);
+	    cube_1_cube = 
+		new THREE.Cube(200, 200, 200, 1, 1, 1, materials, null, null) ;
 	    cube_1 = new THREE.Mesh(cube_1_cube, new THREE.MeshFaceMaterial());
 	    scene.addObject(cube_1);
 		cube_1.events = new ms.event.EventHolder();
             cube_1.position.y = 150;
-	    var plane_1_plane = 
-new THREE.Plane(
-200,200);
+	    plane_1_plane = 
+		new THREE.Plane(200, 200, null, null) ;
 	    plane_1 = new THREE.Mesh(plane_1_plane, plane_material);
 	    scene.addObject(plane_1);
 		plane_1.events = new ms.event.EventHolder();
