--- a/xss/production/test/ui_drag.html
+++ b/xss/production/test/ui_drag.html
@@ -10,8 +10,8 @@
 <script type="text/javascript" src="../js/keys.js"></script>
 		<script type="text/javascript" src="../js/ms-ui.js"></script>
 		<script type="text/javascript" src="../js/ms-streamer.js"></script>
-<script type="text/javascript">	
-var drawingCanvas;		
+<script type="text/javascript">
+    var drawingCanvas;		
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -106,7 +106,6 @@ function start(resolution)
 	}    
 	window.setTimeout(updater, resolution);  
 }  
-var __label1;var lbl1;var btn1;var img1;var tb1;var stateBtn;var lbl3;
             application.clicks = 0;
 window.onload = function() 
 {
@@ -173,20 +172,20 @@ window.onload = function()
 	{    
 		application.events.dispatch("keydown", [keycode]);
 	});
-		    __label1 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "Verdana");
+		    __label1 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         __label1 = __label1;
             __label1.set_x(240);
             __label1.set_y(75);
             __label1.text("drag the smile to move it");
-		    lbl1 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "Verdana");
+		    lbl1 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         lbl1 = lbl1;
             lbl1.set_x(250);
             lbl1.set_y(90);
             lbl1.text("click smiley");
-		    btn1 = new ms.ui.Button( g_ui_root.manager, g_ui_root
-	    , "images/smile_sad_48.png", "images/smile_grin_48.png");
+		    btn1 = 
+			new ms.ui.Button(g_ui_root.manager, g_ui_root, null, null);
         btn1 = btn1;
             btn1.set_x(270);
             btn1.set_y(100);
@@ -210,29 +209,29 @@ btn1.set_y(y - btn1.h / 2);
 	}
 	);
 		application.are_obj_events = true;
-		    img1 = new ms.ui.Image( g_ui_root.manager, g_ui_root
-	    , "images/box.png");
+		    img1 = 
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
         img1 = img1;
             img1.set_x(470);
             img1.set_y(300);
             img1.set_rotation(10);
             img1.set_width(50);
             img1.set_height(50);
-		    tb1 = new ms.ui.TextButton( g_ui_root.manager, g_ui_root
-	    , "Aceptar", "12px Tahoma");
+		    tb1 = 
+			new ms.ui.TextButton(g_ui_root.manager, g_ui_root, null, null);
         tb1 = tb1;
             tb1.set_x(400);
             tb1.set_y(200);
-		    stateBtn = new ms.ui.StateButton( g_ui_root.manager, g_ui_root
-	    , "images/smile_grin_48.png", "images/smile_sad_48.png");
+		    stateBtn = 
+			new ms.ui.StateButton(g_ui_root.manager, g_ui_root, null, null);
         stateBtn = stateBtn;
             stateBtn.set_x(270);
             stateBtn.set_y(200);
             stateBtn.set_rotation(-45);
             stateBtn.set_width(50);
             stateBtn.set_height(50);
-		    lbl3 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "Verdana");
+		    lbl3 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         lbl3 = lbl3;
             lbl3.set_x(330);
             lbl3.set_y(240);
