--- a/xss/production/test/ui_painter.html
+++ b/xss/production/test/ui_painter.html
@@ -10,8 +10,8 @@
 <script type="text/javascript" src="../js/keys.js"></script>
 		<script type="text/javascript" src="../js/ms-ui.js"></script>
 		<script type="text/javascript" src="../js/ms-streamer.js"></script>
-<script type="text/javascript">	
-var drawingCanvas;		
+<script type="text/javascript">
+    var drawingCanvas;		
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -92,7 +92,6 @@ function start(resolution)
 	}    
 	window.setTimeout(updater, resolution);  
 }  
-var __label1;var painter_1;
 window.onload = function() 
 {
 	drawingCanvas = document.getElementById("myCanvas");
@@ -158,14 +157,14 @@ window.onload = function()
 	{    
 		application.events.dispatch("keydown", [keycode]);
 	});
-		    __label1 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "12px Verdana");
+		    __label1 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         __label1 = __label1;
             __label1.set_x(200);
             __label1.set_y(200);
             __label1.text("Here we can see the painter");
-		    painter_1 = new ms.ui.Painter( g_ui_root.manager, g_ui_root
-	    );
+		    painter_1 = 
+			new ms.ui.Painter(g_ui_root.manager, g_ui_root);
         painter_1 = painter_1;
             painter_1.set_x(200);
             painter_1.set_y(300);
