--- a/xss/production/test/3js_class_test_2.html
+++ b/xss/production/test/3js_class_test_2.html
@@ -31,6 +31,7 @@ var g_elapsed = -1;
 var g_delta = 0.0;	
 var drawingCanvas = renderer.domElement;
 var canvas_position = {x:0, y:0};
+var streamer = new ms.streamer.Streamer();
 var app_width = 600;
 var app_height = 400;
 var lbl0;var lbl1;
@@ -82,9 +83,8 @@ var my_cylinder;var scene;var camera_1;
         function create_my_cylinder(
     segments,top_radius,bottom_radius,height,topoffset,bottomoffset ) { 
     var my_cylinder;
-	    var my_cylinder_cylinder = 
-new THREE.Cylinder(
-);
+	    my_cylinder_cylinder = 
+		new THREE.Cylinder(segments, top_radius, bottom_radius, height, topoffset, bottomoffset) ;
 	    my_cylinder = new THREE.Mesh(my_cylinder_cylinder, new THREE.MeshBasicMaterial());
 	    scene.addObject(my_cylinder);
 		my_cylinder.events = new ms.event.EventHolder();
@@ -161,24 +161,22 @@ threejs_load_resources(function()
 	{    
 		application.events.dispatch("keydown", [keycode]);
 	});
-		    lbl0 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "12px Verdana");
+		    lbl0 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         lbl0 = lbl0;
             lbl0.set_x(200);
             lbl0.set_y(75);
             lbl0.text("Click wherever to create a randomly positioned cylinder");
-		    lbl1 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "12px Verdana");
+		    lbl1 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         lbl1 = lbl1;
             lbl1.set_x(200);
             lbl1.set_y(100);
             lbl1.text("Pass the mouse over a cylinder to change its color");
-scene = 
-new THREE.Scene(
-);
-camera_1 = 
-new THREE.Camera(
-75,1.5,1,3000);
+			scene = 
+			new THREE.Scene() ;
+		camera_1 = 
+		new THREE.Camera(75, 1.5, 1, 3000, null) ;	
 		active_camera = camera_1;
             camera_1.position.z = 1000;
 	var ev_parent = this;
