--- a/xss/production/test/3js_package.html
+++ b/xss/production/test/3js_package.html
@@ -32,6 +32,7 @@ var g_elapsed = -1;
 var g_delta = 0.0;	
 var drawingCanvas = renderer.domElement;
 var canvas_position = {x:0, y:0};
+var streamer = new ms.streamer.Streamer();
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var __label1;
@@ -201,44 +202,39 @@ threejs_load_resources(function()
 	{    
 		application.events.dispatch("keydown", [keycode]);
 	});
-		    __label1 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "15px Verdana");
+		    __label1 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         __label1 = __label1;
             __label1.set_x(150);
             __label1.set_y(75);
             __label1.set_color("Ivory");
             __label1.text("Press click to load the package");
-scene = 
-new THREE.Scene(
-);
-camera_1 = 
-new THREE.Camera(
-45,1.5,1,10000);
+			scene = 
+			new THREE.Scene() ;
+		camera_1 = 
+		new THREE.Camera(45, 1.5, 1, 10000, null) ;	
 		active_camera = camera_1;
             camera_1.position.x = 500;
             camera_1.position.y = 500;
             camera_1.position.z = 1000;
-	    var plane_1_plane = 
-new THREE.Plane(
-128,164);
+	    plane_1_plane = 
+		new THREE.Plane(128, 164, null, null) ;
 	    plane_1 = new THREE.Mesh(plane_1_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_1);
 		plane_1.events = new ms.event.EventHolder();
             plane_1.materials[0].map = new THREE.Texture(streamer.get_resource("images/test1.png").data);
             plane_1.position.x = 100;
             plane_1.position.y = 100;
-	    var plane_2_plane = 
-new THREE.Plane(
-128,164);
+	    plane_2_plane = 
+		new THREE.Plane(128, 164, null, null) ;
 	    plane_2 = new THREE.Mesh(plane_2_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_2);
 		plane_2.events = new ms.event.EventHolder();
             plane_2.materials[0].map = new THREE.Texture(streamer.get_resource("images/test2.png").data);
             plane_2.position.x = 300;
             plane_2.position.y = 100;
-	    var plane_3_plane = 
-new THREE.Plane(
-128,164);
+	    plane_3_plane = 
+		new THREE.Plane(128, 164, null, null) ;
 	    plane_3 = new THREE.Mesh(plane_3_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_3);
 		plane_3.events = new ms.event.EventHolder();
@@ -247,13 +243,11 @@ new THREE.Plane(
             plane_3.position.y = 300;
 				pack_1.events.addListener("loaded", function()
 				{				
-container = 
-new THREE.Object3D(
-);
-container.events = new ms.event.EventHolder();
-	    var plane_4_plane = 
-new THREE.Plane(
-128,164);
+			container = 
+			new THREE.Object3D() ;
+			container.events = new ms.event.EventHolder();
+	    plane_4_plane = 
+		new THREE.Plane(128, 164, null, null) ;
 	    plane_4 = new THREE.Mesh(plane_4_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_4);
 		plane_4.events = new ms.event.EventHolder();
@@ -261,9 +255,8 @@ new THREE.Plane(
 				scene.addObject(container);
             plane_4.materials[0].map = new THREE.Texture(streamer.get_resource("images/test4.png").data);
             plane_4.position.x = -100;
-	    var plane_5_plane = 
-new THREE.Plane(
-128,164);
+	    plane_5_plane = 
+		new THREE.Plane(128, 164, null, null) ;
 	    plane_5 = new THREE.Mesh(plane_5_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_5);
 		plane_5.events = new ms.event.EventHolder();
