--- a/xss/production/test/3js_particle_system.html
+++ b/xss/production/test/3js_particle_system.html
@@ -31,6 +31,7 @@ var g_elapsed = -1;
 var g_delta = 0.0;	
 var drawingCanvas = renderer.domElement;
 var canvas_position = {x:0, y:0};
+var streamer = new ms.streamer.Streamer();
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var lbl0;
@@ -117,19 +118,17 @@ threejs_load_resources(function()
 	{    
 		application.events.dispatch("keydown", [keycode]);
 	});
-		    lbl0 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "12px Verdana");
+		    lbl0 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         lbl0 = lbl0;
             lbl0.set_x(350);
             lbl0.set_y(50);
             lbl0.set_color("White");
             lbl0.text("Move the mouse to rotate the camera");
-scene = 
-new THREE.Scene(
-);
-camera_1 = 
-new THREE.Camera(
-75,1.5,1,3000);
+			scene = 
+			new THREE.Scene() ;
+		camera_1 = 
+		new THREE.Camera(75, 1.5, 1, 3000, null) ;	
 		active_camera = camera_1;
             camera_1.position.z = 1000;
 		for ( var i = 0; i < 1000; i++ ) {
