--- a/xss/production/test/3js_sound.html
+++ b/xss/production/test/3js_sound.html
@@ -31,6 +31,7 @@ var g_elapsed = -1;
 var g_delta = 0.0;	
 var drawingCanvas = renderer.domElement;
 var canvas_position = {x:0, y:0};
+var streamer = new ms.streamer.Streamer();
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var application = {};
@@ -104,52 +105,44 @@ color:Yellow,shading:THREE.FlatShading
 material_wireframe = new THREE.MeshLambertMaterial({
 color:MediumSlateBlue ,wireframe:true
 	});
-scene = 
-new THREE.Scene(
-);
+			scene = 
+			new THREE.Scene() ;
 camera_1 = new THREE.QuakeCamera({
 fov:50,aspect:1.5,near:1,far:10000,movementSpeed:70,lookSpeed:0.0500000007,noFly:true,lookVertical:false
 	});
 		active_camera = camera_1;
             camera_1.position.y = 25;
-light = 
-new THREE.DirectionalLight(
-White);
-		;
+	light = 
+	new THREE.DirectionalLight(White, null, null, null) ;
 	scene.addLight(light);
             light.position.y = 0.5;
             light.position.z = 1;
-container_1 = 
-new THREE.Object3D(
-);
-container_1.events = new ms.event.EventHolder();
+			container_1 = 
+			new THREE.Object3D() ;
+			container_1.events = new ms.event.EventHolder();
             container_1.position.x = 250;
             container_1.position.y = 30;
-	    var sphere_1_sphere = 
-new THREE.Sphere(
-20,32,16);
+	    sphere_1_sphere = 
+		new THREE.Sphere(20, 32, 16) ;
 	    sphere_1 = new THREE.Mesh(sphere_1_sphere, material_sphere1);
 	    scene.addObject(sphere_1);
 		sphere_1.events = new ms.event.EventHolder();
 				container_1.addChild(sphere_1);
 				scene.addObject(container_1);
-container_2 = 
-new THREE.Object3D(
-);
-container_2.events = new ms.event.EventHolder();
+			container_2 = 
+			new THREE.Object3D() ;
+			container_2.events = new ms.event.EventHolder();
             container_2.position.x = -250;
             container_2.position.y = 30;
-	    var sphere_2_sphere = 
-new THREE.Sphere(
-20,32,16);
+	    sphere_2_sphere = 
+		new THREE.Sphere(20, 32, 16) ;
 	    sphere_2 = new THREE.Mesh(sphere_2_sphere, material_sphere2);
 	    scene.addObject(sphere_2);
 		sphere_2.events = new ms.event.EventHolder();
 				container_2.addChild(sphere_2);
 				scene.addObject(container_2);
-	    var plane_1_plane = 
-new THREE.Plane(
-1000,1000,100,100);
+	    plane_1_plane = 
+		new THREE.Plane(1000, 1000, 100, 100) ;
 	    plane_1 = new THREE.Mesh(plane_1_plane, material_wireframe);
 	    scene.addObject(plane_1);
 		plane_1.events = new ms.event.EventHolder();
