--- a/xss/production/test/3js_transform.html
+++ b/xss/production/test/3js_transform.html
@@ -31,6 +31,7 @@ var g_elapsed = -1;
 var g_delta = 0.0;	
 var drawingCanvas = renderer.domElement;
 var canvas_position = {x:0, y:0};
+var streamer = new ms.streamer.Streamer();
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var lbl0;var lbl1;var lbl2;
@@ -117,20 +118,20 @@ threejs_load_resources(function()
 	{    
 		application.events.dispatch("keydown", [keycode]);
 	});
-		    lbl0 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "12px Verdana");
+		    lbl0 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         lbl0 = lbl0;
             lbl0.set_x(240);
             lbl0.set_y(75);
             lbl0.text("Move mouse to rotate the cylinder");
-		    lbl1 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "12px Verdana");
+		    lbl1 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         lbl1 = lbl1;
             lbl1.set_x(240);
             lbl1.set_y(100);
             lbl1.text("Move mouse pressing SHIFT to rotate the transform");
-		    lbl2 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "12px Verdana");
+		    lbl2 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         lbl2 = lbl2;
             lbl2.set_x(240);
             lbl2.set_y(125);
@@ -143,37 +144,30 @@ color:Math.random() * 0xffffff
 	});
 sphere_material = new THREE.MeshNormalMaterial({
 	});
-scene = 
-new THREE.Scene(
-);
-camera_1 = 
-new THREE.Camera(
-75,1.5,1,3000);
+			scene = 
+			new THREE.Scene() ;
+		camera_1 = 
+		new THREE.Camera(75, 1.5, 1, 3000, null) ;	
 		active_camera = camera_1;
             camera_1.position.z = 1000;
-light = 
-new THREE.DirectionalLight(
-Ivory);
-		;
+	light = 
+	new THREE.DirectionalLight(Ivory, null, null, null) ;
 	scene.addLight(light);
             light.position.y = 0.5;
             light.position.z = 1;
-	    var cylinder_1_cylinder = 
-new THREE.Cylinder(
-200,100,100,500);
+	    cylinder_1_cylinder = 
+		new THREE.Cylinder(200, 100, 100, 500, null, null) ;
 	    cylinder_1 = new THREE.Mesh(cylinder_1_cylinder, cylinder_material);
 	    scene.addObject(cylinder_1);
 		cylinder_1.events = new ms.event.EventHolder();
             set_rotation_x(cylinder_1.rotation, 70);
             set_rotation_y(cylinder_1.rotation, 70);
             cylinder_1.position.x = 600;
-container = 
-new THREE.Object3D(
-);
-container.events = new ms.event.EventHolder();
-	    var cube_1_cube = 
-new THREE.Cube(
-300,300,300);
+			container = 
+			new THREE.Object3D() ;
+			container.events = new ms.event.EventHolder();
+	    cube_1_cube = 
+		new THREE.Cube(300, 300, 300, null, null, null, null, null, null) ;
 	    cube_1 = new THREE.Mesh(cube_1_cube, cube_material);
 	    scene.addObject(cube_1);
 		cube_1.events = new ms.event.EventHolder();
@@ -192,9 +186,8 @@ set_rotation_z(cube_1.rotation, get_rotation_z(cube_1.rotation) + 0.5);
 	}
 	);
 		application.are_obj_events = true;
-	    var sphere_1_sphere = 
-new THREE.Sphere(
-200,20,20);
+	    sphere_1_sphere = 
+		new THREE.Sphere(200, 20, 20) ;
 	    sphere_1 = new THREE.Mesh(sphere_1_sphere, sphere_material);
 	    scene.addObject(sphere_1);
 		sphere_1.events = new ms.event.EventHolder();
