--- a/xss/production/test/box2d2.html
+++ b/xss/production/test/box2d2.html
@@ -13,8 +13,8 @@
         <script type="text/javascript" src="../js/Box2dWeb-2.1.a.3.min.js"></script> 
 		<script type="text/javascript" src="../js/ms-joint.js"></script> 
             <script type="text/javascript" src="../js/ms-spawner.js"></script>
-<script type="text/javascript">	
-var drawingCanvas;		
+<script type="text/javascript">
+    var drawingCanvas;		
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -205,7 +205,6 @@ function start(resolution)
 	}    
 	window.setTimeout(updater, resolution);  
 }  
-var btn1;
             application.i = 0;
 window.onload = function() 
 {
@@ -272,8 +271,8 @@ window.onload = function()
 	{    
 		application.events.dispatch("keydown", [keycode]);
 	});
-		    btn1 = new ms.ui.Button( g_ui_root.manager, g_ui_root
-	    , "images/smile_sad_48.png", "images/smile_grin_48.png");
+		    btn1 = 
+			new ms.ui.Button(g_ui_root.manager, g_ui_root, null, null);
         btn1 = btn1;
             btn1.set_x(200);
             btn1.set_y(200);
