--- a/xss/production/test/box2d5.html
+++ b/xss/production/test/box2d5.html
@@ -13,8 +13,8 @@
         <script type="text/javascript" src="../js/Box2dWeb-2.1.a.3.min.js"></script> 
 		<script type="text/javascript" src="../js/ms-joint.js"></script> 
             <script type="text/javascript" src="../js/ms-spawner.js"></script>
-<script type="text/javascript">	
-var drawingCanvas;		
+<script type="text/javascript">
+    var drawingCanvas;		
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -233,7 +233,6 @@ function start(resolution)
 	}    
 	window.setTimeout(updater, resolution);  
 }  
-var __label1;var __label2;var __label3;var __label4;var __label5;var btn1;var btn2;var btn3;var btn4;var btn5;var btn6;var __floor1;var __floor2;var __floor3;var __floor4;
             body_1 = Class.create(ms.ui.Image,
         {
     initialize: function($super
@@ -537,89 +536,89 @@ window.onload = function()
 	{    
 		application.events.dispatch("keydown", [keycode]);
 	});
-		    __label1 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "11px Verdana");
+		    __label1 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         __label1 = __label1;
             __label1.set_x(200);
             __label1.set_y(75);
             __label1.text("The happy and sad smileys are connected. Will be?");
-		    __label2 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "11px Verdana");
+		    __label2 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         __label2 = __label2;
             __label2.set_x(200);
             __label2.set_y(95);
             __label2.text("Try to move any of them with the mouse");
-		    __label3 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "11px Verdana");
+		    __label3 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         __label3 = __label3;
             __label3.set_x(50);
             __label3.set_y(135);
             __label3.text("Some faces are happy because they are linked but can rotate freely...(distance joint)");
-		    __label4 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "11px Verdana");
+		    __label4 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         __label4 = __label4;
             __label4.set_x(50);
             __label4.set_y(155);
             __label4.text("Others are sad because they are glued together and have no free will...(weld joint)");
-		    __label5 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "11px Verdana");
+		    __label5 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         __label5 = __label5;
             __label5.set_x(50);
             __label5.set_y(175);
             __label5.text("The two cameras are connected with a pulley joint. Test it !!!");
-		    btn1 = new body_1( g_ui_root.manager, g_ui_root
-	    , "images/smile_grin_48.png");
+		    btn1 = 
+			new body_1(g_ui_root.manager, g_ui_root, "images/smile_grin_48.png");
         btn1 = btn1;
             btn1.set_x(200);
             btn1.set_y(250);
-		    btn2 = new body_1( g_ui_root.manager, g_ui_root
-	    , "images/smile_grin_48.png");
+		    btn2 = 
+			new body_1(g_ui_root.manager, g_ui_root, "images/smile_grin_48.png");
         btn2 = btn2;
             btn2.set_x(100);
             btn2.set_y(250);
-		    btn3 = new body_2( g_ui_root.manager, g_ui_root
-	    , "images/smile_sad_48.png");
+		    btn3 = 
+			new body_2(g_ui_root.manager, g_ui_root, "images/smile_sad_48.png");
         btn3 = btn3;
             btn3.set_x(400);
             btn3.set_y(250);
-		    btn4 = new body_2( g_ui_root.manager, g_ui_root
-	    , "images/smile_sad_48.png");
+		    btn4 = 
+			new body_2(g_ui_root.manager, g_ui_root, "images/smile_sad_48.png");
         btn4 = btn4;
             btn4.set_x(300);
             btn4.set_y(250);
-		    btn5 = new body_3( g_ui_root.manager, g_ui_root
-	    , "images/img1.png");
+		    btn5 = 
+			new body_3(g_ui_root.manager, g_ui_root, "images/img1.png");
         btn5 = btn5;
             btn5.set_x(15);
             btn5.set_y(100);
-		    btn6 = new body_3( g_ui_root.manager, g_ui_root
-	    , "images/img1.png");
+		    btn6 = 
+			new body_3(g_ui_root.manager, g_ui_root, "images/img1.png");
         btn6 = btn6;
             btn6.set_x(500);
             btn6.set_y(500);
-		    __floor1 = new floor( g_ui_root.manager, g_ui_root
-	    , "images/stone-12.jpg");
+		    __floor1 = 
+			new floor(g_ui_root.manager, g_ui_root, "images/stone-12.jpg");
         __floor1 = __floor1;
             __floor1.set_x(0);
             __floor1.set_y(590);
             __floor1.set_width(600);
             __floor1.set_height(10);
-		    __floor2 = new floor( g_ui_root.manager, g_ui_root
-	    , "images/stone-12.jpg");
+		    __floor2 = 
+			new floor(g_ui_root.manager, g_ui_root, "images/stone-12.jpg");
         __floor2 = __floor2;
             __floor2.set_x(0);
             __floor2.set_y(0);
             __floor2.set_width(10);
             __floor2.set_height(600);
-		    __floor3 = new floor( g_ui_root.manager, g_ui_root
-	    , "images/stone-12.jpg");
+		    __floor3 = 
+			new floor(g_ui_root.manager, g_ui_root, "images/stone-12.jpg");
         __floor3 = __floor3;
             __floor3.set_x(0);
             __floor3.set_y(0);
             __floor3.set_width(600);
             __floor3.set_height(10);
-		    __floor4 = new floor( g_ui_root.manager, g_ui_root
-	    , "images/stone-12.jpg");
+		    __floor4 = 
+			new floor(g_ui_root.manager, g_ui_root, "images/stone-12.jpg");
         __floor4 = __floor4;
             __floor4.set_x(590);
             __floor4.set_y(0);
