--- a/xss/production/test/ui_audio_1.html
+++ b/xss/production/test/ui_audio_1.html
@@ -10,8 +10,8 @@
 <script type="text/javascript" src="../js/keys.js"></script>
 		<script type="text/javascript" src="../js/ms-ui.js"></script>
 		<script type="text/javascript" src="../js/ms-streamer.js"></script>
-<script type="text/javascript">	
-var drawingCanvas;		
+<script type="text/javascript">
+    var drawingCanvas;		
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -148,7 +148,6 @@ function start(resolution)
 	}    
 	window.setTimeout(updater, resolution);  
 }  
-var lbl1;var btnExplosion;var btnShoots;
 window.onload = function() 
 {
 	drawingCanvas = document.getElementById("myCanvas");
@@ -214,14 +213,14 @@ window.onload = function()
 	{    
 		application.events.dispatch("keydown", [keycode]);
 	});
-		    lbl1 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "Verdana");
+		    lbl1 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         lbl1 = lbl1;
             lbl1.set_x(220);
             lbl1.set_y(190);
             lbl1.text("click to create a new instance of a sound");
-		    btnExplosion = new ms.ui.Button( g_ui_root.manager, g_ui_root
-	    , "images/bomb.png", "images/bomb.png");
+		    btnExplosion = 
+			new ms.ui.Button(g_ui_root.manager, g_ui_root, null, null);
         btnExplosion = btnExplosion;
             btnExplosion.set_x(290);
             btnExplosion.set_y(220);
@@ -234,8 +233,8 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
-		    btnShoots = new ms.ui.Button( g_ui_root.manager, g_ui_root
-	    , "images/AK-47.png", "images/AK-47.png");
+		    btnShoots = 
+			new ms.ui.Button(g_ui_root.manager, g_ui_root, null, null);
         btnShoots = btnShoots;
             btnShoots.set_x(275);
             btnShoots.set_y(300);
