--- a/xss/production/test/ui_cliparea.html
+++ b/xss/production/test/ui_cliparea.html
@@ -10,8 +10,8 @@
 <script type="text/javascript" src="../js/keys.js"></script>
 		<script type="text/javascript" src="../js/ms-ui.js"></script>
 		<script type="text/javascript" src="../js/ms-streamer.js"></script>
-<script type="text/javascript">	
-var drawingCanvas;		
+<script type="text/javascript">
+    var drawingCanvas;		
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -92,7 +92,6 @@ function start(resolution)
 	}    
 	window.setTimeout(updater, resolution);  
 }  
-var div1;var ca1;var __label1;var lbl1;var ca2;var btn1;var btn2;var stateBtn;var lbl3;
             application.clicks = 0;
 	var ev_parent = this;
 	application.events.addListener("keydown", function(keycode)
@@ -202,41 +201,44 @@ window.onload = function()
 	{    
 		application.events.dispatch("keydown", [keycode]);
 	});
-		    div1 = new ms.ui.Component( g_ui_root.manager, g_ui_root
-	    );div1.mouse_thru = true;
+		    div1 = 
+			new ms.ui.Component(g_ui_root.manager, g_ui_root);
+	    div1.mouse_thru = true;
         div1 = div1;
             div1.set_x(150);
             div1.set_y(0);
             div1.set_width(400);
             div1.set_height(200);
-		    ca1 = new ms.ui.ClipArea( div1.manager, div1
-	    , null);ca1.mouse_thru = true;
+		    ca1 = 
+			new ms.ui.ClipArea(div1.manager, div1, null);
+	    ca1.mouse_thru = true;
         ca1 = ca1;
             ca1.set_x(90);
             ca1.set_y(60);
             ca1.set_width(100);
             ca1.set_height(120);
-		    __label1 = new ms.ui.Label( div1.manager, div1
-	    , "Verdana");
+		    __label1 = 
+			new ms.ui.Label(div1.manager, div1, null);
         __label1 = __label1;
             __label1.set_x(40);
             __label1.set_y(75);
             __label1.text("use arrows to move the clip area");
-		    lbl1 = new ms.ui.Label( div1.manager, div1
-	    , "Verdana");
+		    lbl1 = 
+			new ms.ui.Label(div1.manager, div1, null);
         lbl1 = lbl1;
             lbl1.set_x(100);
             lbl1.set_y(90);
             lbl1.text("click smiley");
-		    ca2 = new ms.ui.ClipArea( div1.manager, div1
-	    , null);ca2.mouse_thru = true;
+		    ca2 = 
+			new ms.ui.ClipArea(div1.manager, div1, null);
+	    ca2.mouse_thru = true;
         ca2 = ca2;
             ca2.set_x(100);
             ca2.set_y(60);
             ca2.set_width(100);
             ca2.set_height(100);
-		    btn1 = new ms.ui.Button( div1.manager, div1
-	    , "images/smile_sad_48.png", "images/smile_grin_48.png");
+		    btn1 = 
+			new ms.ui.Button(div1.manager, div1, null, null);
         btn1 = btn1;
             btn1.set_x(90);
             btn1.set_y(100);
@@ -252,24 +254,24 @@ application.clicks = application.clicks + 1;
 	}
 	);
 		application.are_obj_events = true;
-		    btn2 = new ms.ui.Button( div1.manager, div1
-	    , "images/smile_sad_48.png", "images/smile_grin_48.png");
+		    btn2 = 
+			new ms.ui.Button(div1.manager, div1, null, null);
         btn2 = btn2;
             btn2.set_x(150);
             btn2.set_y(100);
             btn2.set_rotation(10);
             btn2.set_width(50);
             btn2.set_height(50);
-		    stateBtn = new ms.ui.StateButton( g_ui_root.manager, g_ui_root
-	    , "images/smile_grin_48.png", "images/smile_sad_48.png");
+		    stateBtn = 
+			new ms.ui.StateButton(g_ui_root.manager, g_ui_root, null, null);
         stateBtn = stateBtn;
             stateBtn.set_x(270);
             stateBtn.set_y(200);
             stateBtn.set_rotation(-45);
             stateBtn.set_width(50);
             stateBtn.set_height(50);
-		    lbl3 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "Verdana");
+		    lbl3 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         lbl3 = lbl3;
             lbl3.set_x(330);
             lbl3.set_y(240);
