--- a/xss/production/test/ui_kitchen_sink.html
+++ b/xss/production/test/ui_kitchen_sink.html
@@ -10,8 +10,8 @@
 <script type="text/javascript" src="../js/keys.js"></script>
 		<script type="text/javascript" src="../js/ms-ui.js"></script>
 		<script type="text/javascript" src="../js/ms-streamer.js"></script>
-<script type="text/javascript">	
-var drawingCanvas;		
+<script type="text/javascript">
+    var drawingCanvas;		
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -271,7 +271,6 @@ function start(resolution)
 	}    
 	window.setTimeout(updater, resolution);  
 }  
-var main;var test1;var title0;var lbl_event;var lbl0;var lbl1;var btn1;var stateBtn;var lbl3;var test2;var title1;var pb1;var btn2;var btn3;var lbl2;var lbl7;var monster;var test3;var title2;var c1;var r1;var p1;var line1;var lbl4;var lbl5;var lbl6;var lbl8;var btn5;var test4;var title3;var title4;var inst0;var clips;var ca1;var back_img;var ca2;var tb1;var inst1;var inst2;var inst3;var btnNext;var btnPrev;
             application.clicks = 0;
             application.do_rotation_plus = false;
             application.do_rotation_minus = false;
@@ -481,24 +480,25 @@ window.onload = function()
 	{    
 		application.events.dispatch("keydown", [keycode]);
 	});
-		    main = new ms.ui.Switch( g_ui_root.manager, g_ui_root
-	    );
+		    main = 
+			new ms.ui.Switch(g_ui_root.manager, g_ui_root);
         main = main;
             main.set_x(0);
             main.set_y(0);
             main.set_width(600);
             main.set_height(450);
-		    test1 = new ms.ui.Component( main.manager, main
-	    );test1.mouse_thru = true;
+		    test1 = 
+			new ms.ui.Component(main.manager, main);
+	    test1.mouse_thru = true;
         test1 = test1;
-		    title0 = new ms.ui.Label( test1.manager, test1
-	    , "12px Verdana");
+		    title0 = 
+			new ms.ui.Label(test1.manager, test1, null);
         title0 = title0;
             title0.set_x(50);
             title0.set_y(50);
             title0.text("This screen shows some buttons (1/4)");
-		    lbl_event = new ms.ui.Label( test1.manager, test1
-	    , "12px Verdana");
+		    lbl_event = 
+			new ms.ui.Label(test1.manager, test1, null);
         lbl_event = lbl_event;
             lbl_event.set_x(240);
             lbl_event.set_y(120);
@@ -517,20 +517,20 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
-		    lbl0 = new ms.ui.Label( test1.manager, test1
-	    , null);
+		    lbl0 = 
+			new ms.ui.Label(test1.manager, test1, null);
         lbl0 = lbl0;
             lbl0.set_x(240);
             lbl0.set_y(175);
             lbl0.text("Use keyboard arrows to move the first smiley");
-		    lbl1 = new ms.ui.Label( test1.manager, test1
-	    , null);
+		    lbl1 = 
+			new ms.ui.Label(test1.manager, test1, null);
         lbl1 = lbl1;
             lbl1.set_x(330);
             lbl1.set_y(220);
             lbl1.text("Click this smiley to count");
-		    btn1 = new ms.ui.Button( test1.manager, test1
-	    , "images/smile_sad_48.png", "images/smile_grin_48.png");
+		    btn1 = 
+			new ms.ui.Button(test1.manager, test1, null, null);
         btn1 = btn1;
             btn1.set_x(270);
             btn1.set_y(200);
@@ -563,8 +563,8 @@ btn1.set_y(y - btnNext.h / 2);
 	}
 	);
 		application.are_obj_events = true;
-		    stateBtn = new ms.ui.StateButton( test1.manager, test1
-	    , "images/smile_grin_48.png", "images/smile_sad_48.png");
+		    stateBtn = 
+			new ms.ui.StateButton(test1.manager, test1, null, null);
         stateBtn = stateBtn;
             stateBtn.set_x(270);
             stateBtn.set_y(300);
@@ -603,30 +603,31 @@ stateBtn.set_y(y - btnNext.h / 2);
 	}
 	);
 		application.are_obj_events = true;
-		    lbl3 = new ms.ui.Label( test1.manager, test1
-	    , null);
+		    lbl3 = 
+			new ms.ui.Label(test1.manager, test1, null);
         lbl3 = lbl3;
             lbl3.set_x(330);
             lbl3.set_y(340);
             lbl3.text("This smiley is a state button, click it");
-		    test2 = new ms.ui.Component( main.manager, main
-	    );test2.mouse_thru = true;
+		    test2 = 
+			new ms.ui.Component(main.manager, main);
+	    test2.mouse_thru = true;
         test2 = test2;
-		    title1 = new ms.ui.Label( test2.manager, test2
-	    , "12px Verdana");
+		    title1 = 
+			new ms.ui.Label(test2.manager, test2, null);
         title1 = title1;
             title1.set_x(50);
             title1.set_y(50);
             title1.text("This screen shows a percentage or progress bar and a sprite sheet animation (2/4)");
-		    pb1 = new ms.ui.ProgressBar( test2.manager, test2
-	    , null);
+		    pb1 = 
+			new ms.ui.ProgressBar(test2.manager, test2, null);
         pb1 = pb1;
             pb1.set_x(225);
             pb1.set_y(120);
             pb1.set_width(150);
             pb1.set_height(10);
-		    btn2 = new ms.ui.Image( test2.manager, test2
-	    , "images/arrow_left.png");
+		    btn2 = 
+			new ms.ui.Image(test2.manager, test2, null);
         btn2 = btn2;
             btn2.set_x(200);
             btn2.set_y(115);
@@ -658,8 +659,8 @@ btn2.set_y(y - btnNext.h / 2);
 	}
 	);
 		application.are_obj_events = true;
-		    btn3 = new ms.ui.Image( test2.manager, test2
-	    , "images/arrow_right.png");
+		    btn3 = 
+			new ms.ui.Image(test2.manager, test2, null);
         btn3 = btn3;
             btn3.set_x(380);
             btn3.set_y(115);
@@ -691,20 +692,20 @@ btn3.set_y(y - btnNext.h / 2);
 	}
 	);
 		application.are_obj_events = true;
-		    lbl2 = new ms.ui.Label( test2.manager, test2
-	    , null);
+		    lbl2 = 
+			new ms.ui.Label(test2.manager, test2, null);
         lbl2 = lbl2;
             lbl2.set_x(210);
             lbl2.set_y(200);
             lbl2.text("Click small arrows to adjust percentage");
-		    lbl7 = new ms.ui.Label( test2.manager, test2
-	    , "11px Verdana");
+		    lbl7 = 
+			new ms.ui.Label(test2.manager, test2, null);
         lbl7 = lbl7;
             lbl7.set_x(210);
             lbl7.set_y(270);
             lbl7.text("Press arrows on your keyboard to walk the zombie");
-		    monster = new ms.ui.Sprite( test2.manager, test2
-	    , "monster_sheet");
+		    monster = 
+			new ms.ui.Sprite(test2.manager, test2, null);
         monster = monster;
             monster.set_x(300);
             monster.set_y(300);
@@ -720,17 +721,18 @@ monster.set_y(y - monster.h / 2);
 	}
 	);
 		application.are_obj_events = true;
-		    test3 = new ms.ui.Component( main.manager, main
-	    );test3.mouse_thru = true;
+		    test3 = 
+			new ms.ui.Component(main.manager, main);
+	    test3.mouse_thru = true;
         test3 = test3;
-		    title2 = new ms.ui.Label( test3.manager, test3
-	    , "12px Verdana");
+		    title2 = 
+			new ms.ui.Label(test3.manager, test3, null);
         title2 = title2;
             title2.set_x(50);
             title2.set_y(50);
             title2.text("This screen shows a lot of figures (3/4)");
-		    c1 = new ms.ui.Circle( test3.manager, test3
-	    , "cyan", "black", 3);
+		    c1 = 
+			new ms.ui.Circle(test3.manager, test3, null, null, null);
         c1 = c1;
             c1.set_x(70);
             c1.set_y(70);
@@ -760,8 +762,8 @@ c1.set_line_width(c1.line_width - 1);
 	}
 	);
 		application.are_obj_events = true;
-		    r1 = new ms.ui.Rectangle( test3.manager, test3
-	    , "green", null, null);
+		    r1 = 
+			new ms.ui.Rectangle(test3.manager, test3, null, null, null);
         r1 = r1;
             r1.set_x(300);
             r1.set_y(100);
@@ -795,8 +797,8 @@ r1.set_rotation(r1.get_rotation() - 5);
 	}
 	);
 		application.are_obj_events = true;
-		    p1 = new ms.ui.Polygon( test3.manager, test3
-	    , "pink", "brown", 3);
+		    p1 = 
+			new ms.ui.Polygon(test3.manager, test3, null, null, null);
         p1 = p1;
             p1.alpha(40);
 	var ev_parent = this;
@@ -864,40 +866,40 @@ p1.setPointbyIndex(i, application.px, application.py);
 		p1.points.push({id:"point2", x:300, y:250});
 		p1.points.push({id:"point3", x:210, y:230});
 		p1.points.push({id:"point4", x:250, y:300});
-		    line1 = new ms.ui.Line( test3.manager, test3
-	    );
+		    line1 = 
+			new ms.ui.Line(test3.manager, test3);
         line1 = line1;
             line1.set_x1(500);
             line1.set_y1(50);
             line1.set_x2(500);
             line1.set_y2(300);
             line1.set_color("red");
-		    lbl4 = new ms.ui.Label( test3.manager, test3
-	    , "11px Verdana");
+		    lbl4 = 
+			new ms.ui.Label(test3.manager, test3, null);
         lbl4 = lbl4;
             lbl4.set_x(50);
             lbl4.set_y(400);
             lbl4.text("Click the circle pressing NUMPAD + or NUMPAD - to increment or decrement its linewidth");
-		    lbl5 = new ms.ui.Label( test3.manager, test3
-	    , "11px Verdana");
+		    lbl5 = 
+			new ms.ui.Label(test3.manager, test3, null);
         lbl5 = lbl5;
             lbl5.set_x(50);
             lbl5.set_y(420);
             lbl5.text("Greeny the drunked rectangle and Pinky the polygon rotates like the other components, test it!!!");
-		    lbl6 = new ms.ui.Label( test3.manager, test3
-	    , "11px Verdana");
+		    lbl6 = 
+			new ms.ui.Label(test3.manager, test3, null);
         lbl6 = lbl6;
             lbl6.set_x(50);
             lbl6.set_y(440);
             lbl6.text("Click the smiley to increment the black line width");
-		    lbl8 = new ms.ui.Label( test3.manager, test3
-	    , "11px Verdana");
+		    lbl8 = 
+			new ms.ui.Label(test3.manager, test3, null);
         lbl8 = lbl8;
             lbl8.set_x(50);
             lbl8.set_y(460);
             lbl8.text("Use SHIFT/ALT with click to resize the polygon");
-		    btn5 = new ms.ui.Button( test3.manager, test3
-	    , "images/smile_sad_48.png", "images/smile_grin_48.png");
+		    btn5 = 
+			new ms.ui.Button(test3.manager, test3, null, null);
         btn5 = btn5;
             btn5.set_x(400);
             btn5.set_y(200);
@@ -929,78 +931,82 @@ btn5.set_y(y - btn5.h / 2);
 	}
 	);
 		application.are_obj_events = true;
-		    test4 = new ms.ui.Component( main.manager, main
-	    );test4.mouse_thru = true;
+		    test4 = 
+			new ms.ui.Component(main.manager, main);
+	    test4.mouse_thru = true;
         test4 = test4;
-		    title3 = new ms.ui.Label( test4.manager, test4
-	    , "12px Verdana");
+		    title3 = 
+			new ms.ui.Label(test4.manager, test4, null);
         title3 = title3;
             title3.set_x(50);
             title3.set_y(50);
             title3.text("This screen shows two intersected clip area components with diferent forms");
-		    title4 = new ms.ui.Label( test4.manager, test4
-	    , "12px Verdana");
+		    title4 = 
+			new ms.ui.Label(test4.manager, test4, null);
         title4 = title4;
             title4.set_x(50);
             title4.set_y(70);
             title4.text("and the text button(4/4)");
-		    inst0 = new ms.ui.Label( test4.manager, test4
-	    , "12px Verdana");
+		    inst0 = 
+			new ms.ui.Label(test4.manager, test4, null);
         inst0 = inst0;
             inst0.set_x(70);
             inst0.set_y(90);
             inst0.text("Use arrows to move the rect and WASD to move the circle");
-		    clips = new ms.ui.Component( test4.manager, test4
-	    );clips.mouse_thru = true;
+		    clips = 
+			new ms.ui.Component(test4.manager, test4);
+	    clips.mouse_thru = true;
         clips = clips;
-		    ca1 = new ms.ui.ClipArea( clips.manager, clips
-	    , "rect");ca1.mouse_thru = true;
+		    ca1 = 
+			new ms.ui.ClipArea(clips.manager, clips, null);
+	    ca1.mouse_thru = true;
         ca1 = ca1;
             ca1.set_x(90);
             ca1.set_y(100);
             ca1.set_width(200);
             ca1.set_height(220);
             ca1.shape = "rect";
-		    back_img = new ms.ui.Image( clips.manager, clips
-	    , "images/AzuCola_Trans.png");
+		    back_img = 
+			new ms.ui.Image(clips.manager, clips, null);
         back_img = back_img;
             back_img.set_x(0);
             back_img.set_y(0);
             back_img.set_width(500);
             back_img.set_height(500);
-		    ca2 = new ms.ui.ClipArea( clips.manager, clips
-	    , "circle");ca2.mouse_thru = true;
+		    ca2 = 
+			new ms.ui.ClipArea(clips.manager, clips, null);
+	    ca2.mouse_thru = true;
         ca2 = ca2;
             ca2.set_x(100);
             ca2.set_y(160);
             ca2.set_width(200);
             ca2.set_height(200);
             ca2.shape = "circle";
-		    tb1 = new ms.ui.TextButton( test4.manager, test4
-	    , "My_Button", "12px Arial");
+		    tb1 = 
+			new ms.ui.TextButton(test4.manager, test4, null, null);
         tb1 = tb1;
             tb1.set_x(400);
             tb1.set_y(400);
-		    inst1 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "12px Verdana");
+		    inst1 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         inst1 = inst1;
             inst1.set_x(50);
             inst1.set_y(480);
             inst1.text("Click on this arrows to change the screen");
-		    inst2 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "12px Verdana");
+		    inst2 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         inst2 = inst2;
             inst2.set_x(50);
             inst2.set_y(500);
             inst2.text("Use NUMPAD + or NUMPAD - keys with click over a component to rotate it");
-		    inst3 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "12px Verdana");
+		    inst3 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         inst3 = inst3;
             inst3.set_x(50);
             inst3.set_y(520);
             inst3.text("Use CTRL + mouse drag over a component to drag it");
-		    btnNext = new ms.ui.Button( g_ui_root.manager, g_ui_root
-	    , "images/arrow_right_green_48.png", "images/arrow_right_48.png");
+		    btnNext = 
+			new ms.ui.Button(g_ui_root.manager, g_ui_root, null, null);
         btnNext = btnNext;
             btnNext.set_x(320);
             btnNext.set_y(550);
@@ -1035,8 +1041,8 @@ btnNext.set_y(y - btnNext.h / 2);
 	}
 	);
 		application.are_obj_events = true;
-		    btnPrev = new ms.ui.Button( g_ui_root.manager, g_ui_root
-	    , "images/arrow_left_green_48.png", "images/arrow_left_48.png");
+		    btnPrev = 
+			new ms.ui.Button(g_ui_root.manager, g_ui_root, null, null);
         btnPrev = btnPrev;
             btnPrev.set_x(220);
             btnPrev.set_y(550);
