--- a/xss/production/test/ui_sprite.html
+++ b/xss/production/test/ui_sprite.html
@@ -10,8 +10,8 @@
 <script type="text/javascript" src="../js/keys.js"></script>
 		<script type="text/javascript" src="../js/ms-ui.js"></script>
 		<script type="text/javascript" src="../js/ms-streamer.js"></script>
-<script type="text/javascript">	
-var drawingCanvas;		
+<script type="text/javascript">
+    var drawingCanvas;		
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -316,7 +316,6 @@ function start(resolution)
 	}    
 	window.setTimeout(updater, resolution);  
 }  
-var monster;var girl1;var girl2;var mario;var lbl1;var lbl2;var lbl3;
             application.left_key_press = false;
             application.right_key_press = false;
 	var ev_parent = this;
@@ -437,14 +436,14 @@ window.onload = function()
 	{    
 		application.events.dispatch("keydown", [keycode]);
 	});
-		    monster = new ms.ui.Sprite( g_ui_root.manager, g_ui_root
-	    , "monster_sheet");
+		    monster = 
+			new ms.ui.Sprite(g_ui_root.manager, g_ui_root, null);
         monster = monster;
             monster.set_x(200);
             monster.set_y(200);
             monster.set_animation("m_idle");
-		    girl1 = new ms.ui.Sprite( g_ui_root.manager, g_ui_root
-	    , "azucola_sheet");
+		    girl1 = 
+			new ms.ui.Sprite(g_ui_root.manager, g_ui_root, null);
         girl1 = girl1;
             girl1.set_x(300);
             girl1.set_y(200);
@@ -460,8 +459,8 @@ girl1.set_animation("g1_idle");
 	}
 	);
 		application.are_obj_events = true;
-		    girl2 = new ms.ui.Sprite( g_ui_root.manager, g_ui_root
-	    , "azucola_sheet");
+		    girl2 = 
+			new ms.ui.Sprite(g_ui_root.manager, g_ui_root, null);
         girl2 = girl2;
             girl2.set_x(400);
             girl2.set_y(200);
@@ -476,26 +475,26 @@ girl2.set_animation("g2_idle");
 	}
 	);
 		application.are_obj_events = true;
-		    mario = new ms.ui.Sprite( g_ui_root.manager, g_ui_root
-	    , "mario_sheet");
+		    mario = 
+			new ms.ui.Sprite(g_ui_root.manager, g_ui_root, null);
         mario = mario;
             mario.set_x(300);
             mario.set_y(400);
             mario.set_animation("m_idle_r");
-		    lbl1 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "12px Verdana");
+		    lbl1 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         lbl1 = lbl1;
             lbl1.set_x(100);
             lbl1.set_y(100);
             lbl1.text("Press left arrow to walk the monster");
-		    lbl2 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "12px Verdana");
+		    lbl2 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         lbl2 = lbl2;
             lbl2.set_x(100);
             lbl2.set_y(120);
             lbl2.text("Click the blond girl to crash her down and jump later (testing animation queue)");
-		    lbl3 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "12px Verdana");
+		    lbl3 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         lbl3 = lbl3;
             lbl3.set_x(100);
             lbl3.set_y(140);
