--- a/xss/production/test/ui_video.html
+++ b/xss/production/test/ui_video.html
@@ -10,8 +10,8 @@
 <script type="text/javascript" src="../js/keys.js"></script>
 		<script type="text/javascript" src="../js/ms-ui.js"></script>
 		<script type="text/javascript" src="../js/ms-streamer.js"></script>
-<script type="text/javascript">	
-var drawingCanvas;		
+<script type="text/javascript">
+    var drawingCanvas;		
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -274,7 +274,6 @@ function start(resolution)
 	}    
 	window.setTimeout(updater, resolution);  
 }  
-var v;var lbl1;var btnVolUp;var btnVolDown;var btnMute;var lbl2;var btnPlay;var btnPause;var btnStop;var lbl3;var btnRotLeft;var btnRotRight;
 	var ev_parent = this;
 	application.events.addListener("init", function()
 	{    
@@ -346,21 +345,21 @@ window.onload = function()
 	{    
 		application.events.dispatch("keydown", [keycode]);
 	});
-		    v = new ms.ui.Video( g_ui_root.manager, g_ui_root
-	    , "video/sintel.mp4");
+		    v = 
+			new ms.ui.Video(g_ui_root.manager, g_ui_root, null);
         v = v;
             v.set_x(50);
             v.set_y(50);
             v.set_width(400);
             v.set_height(200);
-		    lbl1 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "Verdana");
+		    lbl1 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         lbl1 = lbl1;
             lbl1.set_x(40);
             lbl1.set_y(300);
             lbl1.text("Volume controls");
-		    btnVolUp = new ms.ui.Image( g_ui_root.manager, g_ui_root
-	    , "images/plus.png");
+		    btnVolUp = 
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
         btnVolUp = btnVolUp;
             btnVolUp.set_x(20);
             btnVolUp.set_y(320);
@@ -373,8 +372,8 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
-		    btnVolDown = new ms.ui.Image( g_ui_root.manager, g_ui_root
-	    , "images/minus.png");
+		    btnVolDown = 
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
         btnVolDown = btnVolDown;
             btnVolDown.set_x(60);
             btnVolDown.set_y(320);
@@ -387,8 +386,8 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
-		    btnMute = new ms.ui.StateButton( g_ui_root.manager, g_ui_root
-	    , "images/sound_on.png", "images/sound_off.png");
+		    btnMute = 
+			new ms.ui.StateButton(g_ui_root.manager, g_ui_root, null, null);
         btnMute = btnMute;
             btnMute.set_x(100);
             btnMute.set_y(320);
@@ -401,14 +400,14 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
-		    lbl2 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "Verdana");
+		    lbl2 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         lbl2 = lbl2;
             lbl2.set_x(200);
             lbl2.set_y(300);
             lbl2.text("Playback controls");
-		    btnPlay = new ms.ui.Button( g_ui_root.manager, g_ui_root
-	    , "images/play.png", "images/play_over.png");
+		    btnPlay = 
+			new ms.ui.Button(g_ui_root.manager, g_ui_root, null, null);
         btnPlay = btnPlay;
             btnPlay.set_x(180);
             btnPlay.set_y(315);
@@ -421,8 +420,8 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
-		    btnPause = new ms.ui.Button( g_ui_root.manager, g_ui_root
-	    , "images/pause.png", "images/pause_over.png");
+		    btnPause = 
+			new ms.ui.Button(g_ui_root.manager, g_ui_root, null, null);
         btnPause = btnPause;
             btnPause.set_x(220);
             btnPause.set_y(315);
@@ -435,8 +434,8 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
-		    btnStop = new ms.ui.Button( g_ui_root.manager, g_ui_root
-	    , "images/stop.png", "images/stop_over.png");
+		    btnStop = 
+			new ms.ui.Button(g_ui_root.manager, g_ui_root, null, null);
         btnStop = btnStop;
             btnStop.set_x(260);
             btnStop.set_y(315);
@@ -449,14 +448,14 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
-		    lbl3 = new ms.ui.Label( g_ui_root.manager, g_ui_root
-	    , "Verdana");
+		    lbl3 = 
+			new ms.ui.Label(g_ui_root.manager, g_ui_root, null);
         lbl3 = lbl3;
             lbl3.set_x(360);
             lbl3.set_y(300);
             lbl3.text("Rotation controls");
-		    btnRotLeft = new ms.ui.Image( g_ui_root.manager, g_ui_root
-	    , "images/rota_left.png");
+		    btnRotLeft = 
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
         btnRotLeft = btnRotLeft;
             btnRotLeft.set_x(365);
             btnRotLeft.set_y(320);
@@ -469,8 +468,8 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
-		    btnRotRight = new ms.ui.Image( g_ui_root.manager, g_ui_root
-	    , "images/rota_right.png");
+		    btnRotRight = 
+			new ms.ui.Image(g_ui_root.manager, g_ui_root, null);
         btnRotRight = btnRotRight;
             btnRotRight.set_x(405);
             btnRotRight.set_y(320);
